--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "starlette>=0.46.1",
     "uvicorn>=0.34.0",
+    "pillow>=11.2.1",
 ]
 
 [dependency-groups]
