Add Playwright dependency to pyproject.toml and update uv.lock with version 1.52.0. This integration enhances browser automation capabilities in the project.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "starlette>=0.46.1",
     "uvicorn>=0.34.0",
     "pillow>=11.2.1",
+    "playwright>=1.52.0",
 ]
 
 [dependency-groups]
